--- a/flat-login-form/index.html
+++ b/flat-login-form/index.html
@@ -27,6 +27,7 @@
   <form class="register-form">
     <input type="text" placeholder="name"/>
     <input type="password" placeholder="password"/>
+    <input type="password" placeholder="confirm password"/>
     <input type="text" placeholder="email address"/>
     <button>create</button>
     <p class="message">Already registered? <a href="#">Sign In</a></p>
