--- a/flat-login-form/index.html
+++ b/flat-login-form/index.html
@@ -19,15 +19,14 @@
   
 <div class="container">
   <div class="info">
-    <h1>AfroPay Global</h1><span>Made with <i class="fa fa-heart"></i> by <a href="http://getresolveit.com">ResolveIT LLC</a></span>
+    <h1>Flat Login Form</h1><span>Made with <i class="fa fa-heart"></i> by <a href="http://andytran.me">Andy Tran</a></span>
   </div>
 </div>
 <div class="form">
-  <div class="thumbnail"><img src="African_Union_flag.png"/></div>
+  <div class="thumbnail"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/hat.svg"/></div>
   <form class="register-form">
     <input type="text" placeholder="name"/>
     <input type="password" placeholder="password"/>
-    <input type="password" placeholder="confirm password"/>
     <input type="text" placeholder="email address"/>
     <button>create</button>
     <p class="message">Already registered? <a href="#">Sign In</a></p>
