--- a/Login_form/index.html
+++ b/Login_form/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <!--TITLE-->
-    <title>AfroPAY</title>
+    <title>GlobalPAY</title>
 
     <!--favicons-->
     <link rel="icon" href="img/money.png" type="image/x-icon" />
@@ -31,7 +31,7 @@
 
     <div class="container">
       <div class="info">
-        <h1 style="font-weight: bold;">Afro<span style="font-size: 38px; font-weight: normal; font-style: italic;">PAY</span></h1><span>Made with <i class="fa fa-globe"></i> in mind by <a target="_blank" href="http://GetResolveIT.com">ResolveIT</a></span>
+        <h1 style="font-weight: bold;">Global<span style="font-size: 38px; font-weight: normal; font-style: italic;">PAY</span></h1><span>Made with <i class="fa fa-globe"></i> in mind by <a target="_blank" href="http://GetResolveIT.com">ResolveIT</a></span>
       </div>
     </div>
 
