--- a/usr_pg/index2.html
+++ b/usr_pg/index2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>AfroPAY ET | Temesgen E.</title>
+  <title>GlobalPAY Transfer</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -27,7 +27,7 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<body class="hold-transition skin-green sidebar-mini">
+<body class="hold-transition skin-black sidebar-mini">
 <div class="wrapper">
 
   <header class="main-header">
@@ -35,9 +35,9 @@
     <!-- Logo -->
     <a href="index2.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>A</b>PY</span>
+      <span class="logo-mini"><b>G</b>PY</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg" style="font-style: italic;"><b style="font-style: normal;">Afro</b>PAY</span>
+      <span class="logo-lg" style="font-style: italic;"><b style="font-style: normal;">Global</b>PAY</span>
     </a>
 
     <!-- Header Navbar: style can be found in header.less -->
