Changing template to look like a user account.

--- a/usr_pg/index2.html
+++ b/usr_pg/index2.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!--TITLE-->
-  <title>GlobalPAY Transfer</title>
+  <title>KafaliPAY Transfer</title>
   
   <!--favicons-->
   <link rel="icon" href="dist/img/money.png" type="image/x-icon" />
@@ -47,9 +47,9 @@
     <!-- Logo -->
     <a href="index2.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>G</b>PY</span>
+      <span class="logo-mini"><b>K</b>PY</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg" style="font-style: italic;"><b style="font-style: normal;">Global</b>PAY</span>
+      <span class="logo-lg" style="font-style: italic;"><b style="font-style: normal;">Kafali</b>PAY</span>
     </a>
 
     <!-- Header Navbar: style can be found in header.less -->
