Fixing admin page

--- a/usr_pg/index.html
+++ b/usr_pg/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>KafaliPay ET | Temesgen E.</title>
+  <title>KPay | Temesgen E.</title>
+  <!--favicons-->
+  <link rel="icon" href="dist/img/money.png" type="image/x-icon" />
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.7 -->
@@ -523,12 +525,12 @@
           <!-- small box -->
           <div class="small-box bg-aqua">
             <div class="inner">
-              <h3>150</h3>
+              <h3>150.00</h3>
 
-              <p>New Orders</p>
+              <p>Value in Euro</p>
             </div>
             <div class="icon">
-              <i class="ion ion-bag"></i>
+              <i class="">€URt</i>
             </div>
             <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
@@ -538,12 +540,12 @@
           <!-- small box -->
           <div class="small-box bg-green">
             <div class="inner">
-              <h3>53<sup style="font-size: 20px">%</sup></h3>
+              <h3>53.00<sup style="font-size: 20px"></sup></h3>
 
-              <p>Bounce Rate</p>
+              <p>Value in US Dollar</p>
             </div>
             <div class="icon">
-              <i class="ion ion-stats-bars"></i>
+              <i class="">USD$t</i>
             </div>
             <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
@@ -553,12 +555,12 @@
           <!-- small box -->
           <div class="small-box bg-yellow">
             <div class="inner">
-              <h3>44</h3>
+              <h3>44.00</h3>
 
-              <p>User Registrations</p>
+              <p>Value in CN¥</p>
             </div>
             <div class="icon">
-              <i class="ion ion-person-add"></i>
+              <i class="">CN¥t</i>
             </div>
             <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
@@ -568,12 +570,12 @@
           <!-- small box -->
           <div class="small-box bg-red">
             <div class="inner">
-              <h3>65</h3>
+              <h3>6760.14</h3>
 
-              <p>Unique Visitors</p>
+              <p>TOTAL in ETB</p>
             </div>
             <div class="icon">
-              <i class="ion ion-pie-graph"></i>
+              <i class="">ETBt</i>
             </div>
             <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
@@ -852,7 +854,7 @@
               <i class="fa fa-map-marker"></i>
 
               <h3 class="box-title">
-                Visitors
+                Senders
               </h3>
             </div>
             <div class="box-body">
@@ -863,7 +865,7 @@
               <div class="row">
                 <div class="col-xs-4 text-center" style="border-right: 1px solid #f4f4f4">
                   <div id="sparkline-1"></div>
-                  <div class="knob-label">Visitors</div>
+                  <div class="knob-label">Senders</div>
                 </div>
                 <!-- ./col -->
                 <div class="col-xs-4 text-center" style="border-right: 1px solid #f4f4f4">
