--- a/usr_pg/index2.html
+++ b/usr_pg/index2.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
   <!--TITLE-->
-  <title>KafaliPAY Transfer</title>
+  <title>KPay Worldwide</title>
   
   <!--favicons-->
   <link rel="icon" href="dist/img/money.png" type="image/x-icon" />
@@ -424,8 +424,8 @@
             <span class="info-box-icon bg-aqua"><i class="ion ion-ios-gear-outline"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">Y2Y</span>
-              <span class="info-box-number">190<small>%</small></span>
+              <span class="info-box-text">EUROS</span>
+              <span class="info-box-number">190<small></small></span>
             </div>
             <!-- /.info-box-content -->
           </div>
@@ -451,7 +451,7 @@
 
         <div class="col-md-3 col-sm-6 col-xs-12">
           <div class="info-box">
-            <span class="info-box-icon bg-green"><i class="ion ion-ios-cart-outline"></i></span>
+            <span class="info-box-icon bg-green"><i class="ion ion-logo-euro"></i></span>
 
             <div class="info-box-content">
               <span class="info-box-text">Transactions</span>
